compiler/tests/fail/common/typealias_annotation_param.jazz

type arch_size = u64;

#[stackzero=loop, stackzerosize=arch_size]
export fn main1(reg u64 p) { }
